# Legal_AI_Assistant

./: .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.qwen/: rules.md
data/cache/: .gitkeep
data/codes/: README.md
docker/: docker-compose.yml  init.sql
docs/: DATA_SOURCES_INTEGRATION.md  FINAL_REPORT_2026_02_21.md  RAG_IMPLEMENTATION_REPORT.md  SETUP_GUIDE.md  architecture.md  dashboard-implementation.md  dashboard-setup.md  error-log.md  fallback-implementation-report.md  langgraph-audit.md  langgraph-integration.md  llm-fallback-system.md  progress.md  tz-1.1-report.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: searchApi.ts
frontend/src/components/: Header.tsx  QueryInput.tsx  ResultDetail.tsx  ResultsList.tsx  (+1 more)
scripts/: setup_rag.py
skills/contract-draft-assist/: SKILL.md
skills/legal-research/: SKILL.md
src/: __init__.py  main.py
src/api/: __init__.py  server.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/llm/: __init__.py  client.py  perplexity_client.py  prompts.py
src/prompts/: classify.j2  generate.j2  verify.j2
src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py
src/tests/: __init__.py  conftest.py  golden_set.jsonl  test_api.py  test_citation.py  test_e2e.py  test_embeddings.py  test_graph.py  test_llm_fallback.py  test_nodes.py  test_rag.py  test_state.py
src/tools/: __init__.py  citation_check.py  kad_parser.py  legal_utils.py
src/utils/: __init__.py  logging_config.py
(+16 files in other folders)
